Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-3887

rebalance is stuck when rebalancing in 3x dg bucket with 20 million items (>100 GB)

    XMLWordPrintable

Details

    Description

      During adding or removing a machine rebalance is stuck forever.
      Per some analysis it looks like all of the memcached worker threads are waiting for a new event on a socket (in epoll_wait), Chiyoung is looking into this now.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            chiyoung Chiyoung Seo (Inactive)
            sharon Sharon Barr (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty