ep_engine.cc
@@ -2384,8 +2384,8 @@ ENGINE_ERROR_CODE EventuallyPersistentEngine::tapNotify(const void *cookie,
                 addDeleteEvent(k, vbucket, 0);
             }
             TapConsumer *tc = dynamic_cast<TapConsumer*>(connection);
-            if (tc && !tc->supportsCheckpointSync()) {
-                // If the checkpoint synchronization is not supported,
+            if (tc && (!tc->supportsCheckpointSync() || tc->isBackfillPhase())) {
+                // If the checkpoint synchronization is not supported or it's in backfill phase,
                 // check if a new checkpoint should be created or not.
                 tc->checkVBOpenCheckpoint(vbucket);
             }
@@ -2449,7 +2449,7 @@ ENGINE_ERROR_CODE EventuallyPersistentEngine::tapNotify(const void *cookie,
 
             delete item;
             TapConsumer *tc = dynamic_cast<TapConsumer*>(connection);
-            if (tc && !tc->supportsCheckpointSync()) {
+            if (tc && (!tc->supportsCheckpointSync() || tc->isBackfillPhase())) {
                 tc->checkVBOpenCheckpoint(vbucket);
             }
 
@@ -2493,6 +2493,26 @@ ENGINE_ERROR_CODE EventuallyPersistentEngine::tapNotify(const void *cookie,
                     if (ret == ENGINE_DISCONNECT) {
                         getLogger()->log(EXTENSION_LOG_WARNING, NULL,
                                      "Failed to reset a vbucket %d. Force disconnect\n", vbucket);
+                    }
+                    TapConsumer *tc = dynamic_cast<TapConsumer*>(connection);
+                    if (tc) {
+                        tc->setBackfillPhase(true);
+                    } else {
+                        ret = ENGINE_DISCONNECT;
+                        getLogger()->log(EXTENSION_LOG_WARNING, NULL,
+                                         "TAP consumer doesn't exists. Force disconnect\n");
+                    }
+                }
+                break;
+            case TAP_OPAQUE_CLOSE_BACKFILL:
+                {
+                    TapConsumer *tc = dynamic_cast<TapConsumer*>(connection);
+                    if (tc) {
+                        tc->setBackfillPhase(false);
+                    } else {
+                        ret = ENGINE_DISCONNECT;
+                        getLogger()->log(EXTENSION_LOG_WARNING, NULL,
+                                         "TAP consumer doesn't exists. Force disconnect\n");
                     }
                 }
                 break;
